banking/lua-outbound.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: lua-outbound
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
            subFilter:
              name: "envoy.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: "envoy.lua"
        config:
          inline_code: |
            function envoy_on_request(request_handler)
              request_handler:logWarn("this is beginning to disturb me")
            end
  workloadSelector:
    labels:
      tyro-team: splitbrains
